After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 698710 - memory leaks
memory leaks
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-04-24 05:40 UTC by Pavel Vasin
Modified: 2013-05-15 08:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
barrier: Fix memory leak (841 bytes, patch)
2013-04-24 05:41 UTC, Pavel Vasin
committed Details | Review
background: Fix memory leak (1.27 KB, patch)
2013-04-24 05:41 UTC, Pavel Vasin
committed Details | Review
window: Add missing chain-up for finalize() (699 bytes, patch)
2013-04-24 05:41 UTC, Pavel Vasin
committed Details | Review

Description Pavel Vasin 2013-04-24 05:40:56 UTC
.
Comment 1 Pavel Vasin 2013-04-24 05:41:18 UTC
Created attachment 242307 [details] [review]
barrier: Fix memory leak
Comment 2 Pavel Vasin 2013-04-24 05:41:35 UTC
Created attachment 242308 [details] [review]
background: Fix memory leak
Comment 3 Pavel Vasin 2013-04-24 05:41:52 UTC
Created attachment 242309 [details] [review]
window: Add missing chain-up for finalize()
Comment 4 Rui Matos 2013-04-24 09:54:02 UTC
Review of attachment 242309 [details] [review]:

Yes
Comment 5 Rui Matos 2013-04-24 09:59:53 UTC
Review of attachment 242308 [details] [review]:

Looks correct
Comment 6 Rui Matos 2013-04-24 10:05:22 UTC
Review of attachment 242307 [details] [review]:

Yep
Comment 7 Pavel Vasin 2013-04-28 16:21:43 UTC
Please commit. I don't have a git account.
Comment 8 Rui Matos 2013-04-29 13:52:51 UTC
Ok, thanks for the patches!

Attachment 242307 [details] pushed as 5b66218 - barrier: Fix memory leak
Attachment 242308 [details] pushed as 8880dff - background: Fix memory leak
Attachment 242309 [details] pushed as 970a446 - window: Add missing chain-up for finalize()
Comment 9 Rui Matos 2013-04-29 14:04:01 UTC
Pushed for 3.8 too.