src/core/barrier.c
@@ -59,6 +59,8 @@ struct _MetaBarrierPrivate
   PointerBarrier xbarrier;
 };
 
+static void meta_barrier_event_unref (MetaBarrierEvent *event);
+
 static void
 meta_barrier_get_property (GObject    *object,
                            guint       prop_id,
@@ -359,6 +361,8 @@ meta_barrier_fire_event (MetaBarrier    *barrier,
     default:
       g_assert_not_reached ();
     }
+
+  meta_barrier_event_unref (event);
 }
 
 gboolean
